WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
83451
combine two arrays in EventException.cpp into one
https://bugs.webkit.org/show_bug.cgi?id=83451
Summary
combine two arrays in EventException.cpp into one
Lu Guanqun
Reported
2012-04-08 21:19:50 PDT
combine two arrays in EventException.cpp into one, this helps to remove one FIXME in the file.
Attachments
Patch
(2.90 KB, patch)
2012-04-08 21:23 PDT
,
Lu Guanqun
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Lu Guanqun
Comment 1
2012-04-08 21:23:41 PDT
Created
attachment 136179
[details]
Patch
WebKit Review Bot
Comment 2
2012-04-09 22:51:54 PDT
Comment on
attachment 136179
[details]
Patch Clearing flags on attachment: 136179 Committed
r113686
: <
http://trac.webkit.org/changeset/113686
>
WebKit Review Bot
Comment 3
2012-04-09 22:51:59 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug