combine two arrays in EventException.cpp into one https://bugs.webkit.org/show_bug.cgi?id=83451

Patch by Lu Guanqun <guanqun.lu@intel.com> on 2012-04-09
Reviewed by Kentaro Hara.

No new tests required.

* dom/EventException.cpp:
(EventExceptionNameDescription):
(WebCore):
(WebCore::EventException::initializeDescription):

Canonical link: https://commits.webkit.org/100996@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113686 268f45cc-cd09-0410-ab3c-d52691b4dbfc